# swagger.json
@@ -31,6 +31,10 @@
     {
       "name": "User Biodata",
       "description": "Biodata Endpoints"
+    },
+    {
+      "name": "Wishlist",
+      "description": "Wishlist Endpoints"
     }
   ],
   "schemes": ["https"],
@@ -1062,6 +1066,89 @@
           }
         }
       }
+    },
+    "/wishlist": {
+      "post": {
+        "tags": ["Wishlist"],
+        "summary": "Add to Wishlist",
+        "description": "Add Product to User Wishlist",
+        "parameters": [
+          {
+            "in": "formData",
+            "name": "product_id",
+            "type": "integer",
+            "description": "Product ID"
+          },
+          {
+            "in": "formData",
+            "name": "user_id",
+            "type": "integer",
+            "description": "User ID"
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "wishlist": {
+                  "$ref": "#/definitions/Wishlist"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Validation Failed",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "UNAUTHORIZED"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Product ID and Use ID is required"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Product Not Found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "NOT_FOUND"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Product not found"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "System Error / Unexpected Error",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "SYSTEM_ERROR"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Something wrong with server"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -1073,13 +1160,7 @@
           "type": "array",
           "items": {
             "type": "string",
-            "example": [
-              "Health",
-              "Sport",
-              "Automotive",
-              "Electronic",
-              "Property"
-            ]
+            "example": ["Health", "Sport", "Automotive", "Electronic", "Property"]
           }
         }
       }
@@ -1169,6 +1250,32 @@
             "type": "string",
             "example": ["jam_tangan_1.png", "jam_tangan_2.png"]
           }
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "Wishlist": {
+      "type": "object",
+      "required": ["product_id, user_id"],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "example": "1"
+        },
+        "product_id": {
+          "type": "integer",
+          "example": "1"
+        },
+        "user_id": {
+          "type": "integer",
+          "example": "1"
         },
         "createdAt": {
           "type": "string",
